# orderstats

./: .gitignore  .pylintrc  .style.yapf  CITATION.cff  README.md  constants.py  paper_examples.py  pyproject.toml  requirements.txt  setup.cfg
matplotlib_styles/: example.mplstyle  ieee.mplstyle  nature.mplstyle  science.mplstyle
orderstats/: __init__.py  classification_utils.py  density_estimation.py  distributions.py  efron_stein.py  exponential.py  plot_utils.py  scoring.py  tail_estimation.py  utils.py
tests/: test_distributions.py  test_utils.py
