[metadata]
name = orderstats
version = 1.0.0
author = Ahmet Zahid Balcıoğlu, Oğuz Gürerk
author_email = zahidbalcioglu@gmail.com
description = Outlier scoring using order statistics, and analysis of heavy-tailed data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Selozhd/orderstats
project_urls =
    Bug Tracker = https://github.com/Selozhd/orderstats/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = orderstats
packages = find:
python_requires = >=3.6

[options.packages.find]
where = orderstats
